edited resume page and css
edited resume page and css

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,19 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body style="height: 100%">
     <header>
       <nav>
         <ul>
           <li><a href="index.html">Portfolio</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="resume.html">Resume</a></li>
         </ul>
       </nav>
     </header>
-    <p>portfolio</p>
+    <section id="home_page_body">
+      <h1 >Group 51 Mixed portfolio</h1>
+    </section>
+    
   </body>
 </html>
