--- a/public/projects.html
+++ b/public/projects.html
@@ -11,6 +11,7 @@
         <ul>
           <li><a href="index.html">Portfolio</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="resume.html">Resume</a></li>
         </ul>
       </nav>
     </header>
