edited css file
edited tag ids

--- a/public/resume.html
+++ b/public/resume.html
@@ -30,7 +30,7 @@
       </section>
       <hr>
       <p>42 rue lololi , Gatineau, QC JZY LZL <b>| (666) 666-666 | group51@gmail.com</b></p>
-      <h2 style="margin-top: 25px;">Summary of Qualifications</h2>
+      <h2>Summary of Qualifications</h2>
       <hr>
       <ul>
         <li>Third-year student in <b>computer science</b> at the University of Ottawa</li>
@@ -43,9 +43,9 @@
         <li>Great teamwork skills obtained through various group projects and being part of athletic teams</li>
         <li><b>Advanced management skills</b> acquired through jobs, Internships, and extra-curricular activities</li>
       </ul>
-      <h2 style="margin-top: 25px;">Education</h2>
+      <h2>Education</h2>
       <hr>
-      <section id="item_header"><h4>Honors Bachelor of Science in Computer Science (Co-op)</h4><h4 style="text-align: right;">2021-Present</h4></section>
+      <section id="item_header"><h4>Honors Bachelor of Science in Computer Science (Co-op)</h4><h4 id="resume_body_h4">2021-Present</h4></section>
       <div id="location"></div>
       <p id="location">University of Ottawa, Ottawa, Ontario</p>
       <ul>
@@ -54,9 +54,9 @@
         <li>Expected to graduate in Fall 2025</li>
         <li>Received academic achievement award for CGPA above 9.2</li>
       </ul>
-      <h2 style="margin-top: 25px;">Work Experience</h2>
+      <h2>Work Experience</h2>
       <hr>
-      <section id="item_header"><h4>Network Service Software Tester</h4><h4 style="text-align: right;">01/2024-04/2024</h4></section>
+      <section id="item_header"><h4>Network Service Software Tester</h4><h4 id="resume_body_h4">01/2024-04/2024</h4></section>
       <p id="location">Nokia Corporation, Ottawa, Canada</p>
       <ul>
         <li>Developed automation scripts to enhance software installation processes, resulting in increased efficiency</li>
@@ -64,7 +64,7 @@
         <li>Used Red Hat Linux for all development tasks, ensuring compatibility and reliability throughout the testing phase</li>
         <li>Facilitated software deployment on KVMs (Kernel-based Virtual Machines) via SSH and hypervisors</li>
       </ul>
-      <section id="item_header"><h4>Food Bank Coordinator</h4><h4 style="text-align: right;">07/2022-Present</h4></section>
+      <section id="item_header"><h4>Food Bank Coordinator</h4><h4 id="resume_body_h4">07/2022-Present</h4></section>
       <p id="location">Food Bank University of Ottawa student Union,, Ottawa, Canada</p>
       <ul>
         <li>Managed food supply orders, deliveries, unloading, and restocking of the food bank</li>
@@ -74,7 +74,7 @@
       </ul>
       <section id="item_header">
         <h4>Technical Publicist</h4>
-        <h4 style="text-align: right;">05/2022-08/2022</h4>
+        <h4 id="resume_body_h4">05/2022-08/2022</h4>
       </section>
       <p id="location">Ciena Corporation, Ottawa, Canada</p>
       <ul>
@@ -86,7 +86,7 @@
       </ul>
       <section id="item_header">
         <h4>IT Assistant</h4>
-        <h4 style="text-align: right;">07/2021-08/2021</h4>
+        <h4 id="resume_body_h4">07/2021-08/2021</h4>
       </section>
       <p id="location">ICRISAT, Bamako, Mali</p>
       <ul>
@@ -97,7 +97,7 @@
       </ul>
       <section id="item_header">
         <h4>Engineering Assistant</h4>
-        <h4 style="text-align: right;">06/2019-07/2019</h4>
+        <h4 id="resume_body_h4">06/2019-07/2019</h4>
       </section>
       <p id="location">E.C.M sarl (Entreprise pour la construction au Mali), Bamako, Mali</p>
       <ul>
@@ -105,7 +105,7 @@
           <li>Assisted the manager during all his meetings with clients and employees</li>
           <li>Acquired knowledge in the different processes involved with the construction of a multi-story house</li>
       </ul>
-      <h2 style="margin-top: 25px;">Skills and abilities</h2>
+      <h2>Skills and abilities</h2>
       <hr>
       <h4>Computer Skills</h4>
       <ul>
