--- a/public/projects.html
+++ b/public/projects.html
@@ -14,6 +14,57 @@
         </ul>
       </nav>
     </header>
-    <p>projects</p>
+    <section id="projects">
+      <h2>Projects</h2>
+      <section class="project">
+        <h3>Hotel Reservation Website</h3>
+        <p>
+          As part of the Database 1 course at the University of Ottawa, our team
+          of three members designed and developed a hotel reservation website.
+          This project integrated a PostgreSQL database to manage and retrieve
+          reservation data and utilized modern web technologies for a seamless
+          user experience. The front end was built with React, providing an
+          intuitive interface for users to book hotel rooms, while the back end
+          was developed with Java and Spring Boot, ensuring efficient handling
+          of requests. It includes the following technologies:
+        </p>
+        <ul>
+          <li>
+            React: Used to build the dynamic and responsive front-end user
+            interface.
+          </li>
+          <li>
+            Java 19: Served as the primary programming language for the back
+            end, offering a reliable and high-performance environment for
+            server-side logic.
+          </li>
+          <li>
+            Spring Boot: simplified the development of the back end, providing
+            various features like embedded servers and simplified dependency
+            management.
+          </li>
+          <li>
+            PostgreSQL: Chosen for the database layer, PostgreSQL offered robust
+            and scalable database management capabilities, ensuring efficient
+            data storage and retrieval.
+          </li>
+          <li>
+            Maven: Used for managing project dependencies and building the
+            Java-based back end, ensuring a consistent and reproducible build
+            process.
+          </li>
+          <li>
+            Node.js: Essential for running the front-end development
+            environment, facilitating the installation and management of
+            dependencies and serving the React application during development.
+          </li>
+        </ul>
+        <h4>Preview of the website</h4>
+        <img src="images/projet1_1.png" alt="project1image" />
+        <img src="images/projet1_2.png" alt="project1image" />
+        <img src="images/projet1_3.png" alt="project1image" />
+        <img src="images/projet1_4.png" alt="project1image" />
+      </section>
+    </section>
   </body>
 </html>
