added info on landing page
edited home page

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,13 @@
           <li><a href="index.html">Portfolio</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="resume.html">Resume</a></li>
-
         </ul>
       </nav>
     </header>
-    <section id="home_page_body">
+    <section id="resume_body">
       <h1 >Group 51 Mixed portfolio</h1>
+      <h4>About</h4>
+      <p>This website was made by Abraham Tabo (student number 300228201) and Chloé (….). The website is a mixed portfolio containing a page with a resume and a page describing a past project completed by one of the group members. Feel free to browse our portfolio and make suggestions or use our past projects and experience as inspiration. You will also find links to one of the group members linkedIn and Github repository. Thank you for taking the time to browse on our repository. </p>
     </section>
     
   </body>
