Added the CSS for the project section

--- a/public/projects.html
+++ b/public/projects.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li>
-            <img id="uott_logo"  src="uottawa_logo.png" alt="Example Image">
+            <img id="uott_logo" src="uottawa_logo.png" alt="Example Image" />
           </li>
           <li><a href="index.html">Portfolio</a></li>
           <li><a href="projects.html">Projects</a></li>
@@ -19,9 +19,10 @@
       </nav>
     </header>
     <section id="projects">
-      <h2>Projects</h2>
+      <h1>Projects</h1>
+      <hr>
       <section class="project">
-        <h3>Hotel Reservation Website</h3>
+        <h2>Hotel Reservation Website</h3>
         <p>
           As part of the Database 1 course at the University of Ottawa, our team
           of three members designed and developed a hotel reservation website.
@@ -34,40 +35,42 @@
         </p>
         <ul>
           <li>
-            React: Used to build the dynamic and responsive front-end user
+            <b>React:</b> Used to build the dynamic and responsive front-end user
             interface.
           </li>
           <li>
-            Java 19: Served as the primary programming language for the back
+            <b>Java 19:</b> Served as the primary programming language for the back
             end, offering a reliable and high-performance environment for
             server-side logic.
           </li>
           <li>
-            Spring Boot: simplified the development of the back end, providing
+            <b>Spring Boot:</b> simplified the development of the back end, providing
             various features like embedded servers and simplified dependency
             management.
           </li>
           <li>
-            PostgreSQL: Chosen for the database layer, PostgreSQL offered robust
+            <b>PostgreSQL:</b> Chosen for the database layer, PostgreSQL offered robust
             and scalable database management capabilities, ensuring efficient
             data storage and retrieval.
           </li>
           <li>
-            Maven: Used for managing project dependencies and building the
+            <b>Maven:</b> Used for managing project dependencies and building the
             Java-based back end, ensuring a consistent and reproducible build
             process.
           </li>
           <li>
-            Node.js: Essential for running the front-end development
+            <b>Node.js:</b>: Essential for running the front-end development
             environment, facilitating the installation and management of
             dependencies and serving the React application during development.
           </li>
         </ul>
-        <h4>Preview of the website</h4>
-        <img src="images/projet1_1.png" alt="project1image" />
-        <img src="images/projet1_2.png" alt="project1image" />
-        <img src="images/projet1_3.png" alt="project1image" />
-        <img src="images/projet1_4.png" alt="project1image" />
+        <h3>Preview of the website</h4>
+            <div class="image-grid">
+                <img src="images/projet1_1.png" alt="project1image" />
+                <img src="images/projet1_2.png" alt="project1image" />
+                <img src="images/projet1_3.png" alt="project1image" />
+                <img src="images/projet1_4.png" alt="project1image" />
+              </div>
       </section>
     </section>
   </body>
