Move the images to image folder and name the alts accordingly

--- a/public/resume.html
+++ b/public/resume.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li>
-            <img id="uott_logo"  src="uottawa_logo.png" alt="Example Image">
+            <img id="uott_logo"  src="images/uottawa_logo.png" alt="UOttawa Logo">
           </li>
           <li><a href="index.html">Portfolio</a></li>
           <li><a href="projects.html">Projects</a></li>
@@ -22,10 +22,10 @@
       <section id="item_header_name" style="font-size: 30px">
         <h1 style="justify-content: left;">Resume</h1>
         <a href="https://www.linkedin.com/in/abraham-tabo-285412223/" style="margin-left: auto;">
-          <img id="click_logo"  src="LinkedIn_logo_initials.png" alt="Example Image">
+          <img id="click_logo"  src="images/LinkedIn_logo_initials.png" alt="Linkedin logo">
         </a>
         <a href="https://github.com/tabo006" style="margin-left: 10px;">
-          <img id="click_logo"  src="github_lg.jpg" alt="Example Image">
+          <img id="click_logo"  src="images/github_lg.jpg" alt="Github logo">
         </a>
       </section>
       <hr>
