--- a/public/projects.html
+++ b/public/projects.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li>
-            <img id="uott_logo" src="uottawa_logo.png" alt="Example Image" />
+            <img id="uott_logo" src="images/uottawa_logo.png" alt="UOttawa Logo" />
           </li>
           <li><a href="index.html">Portfolio</a></li>
           <li><a href="projects.html">Projects</a></li>
