Added the html information for the tictactoe game project. Modified the css so that the images fit properly.

--- a/public/projects.html
+++ b/public/projects.html
@@ -72,6 +72,27 @@
                 <img src="images/projet1_4.png" alt="project1image" />
               </div>
       </section>
+    <section class="project">
+      <h2>Tic Tac Toe Game</h2>
+      <p>
+        Developed in a team of 2 as a single-player game for the CSI3140 course at the
+        University of Ottawa, this Tic Tac Toe game showcases proficiency in
+        HTML, CSS, and JavaScript. The game consists of a 3x3 grid where the player and the computer 
+        take turns clicking squares to place their mark (X for the player, O for the computer). 
+        The game indicates whose turn it is.
+      </p>
+      <ul>
+        <li>
+          <b>HTML, CSS, JavaScript:</b> Used to create the game interface and
+          implement game logic.
+        </li>
+      </ul>
+      <h3>Preview of the game</h3>
+      <div class="image-grid">
+        <img src="images/tictactoe_1.png" alt="tictactoeimage" />
+        <img src="images/tictactoe_2.png" alt="tictactoeimage" />
+      </div>
+    </section>
     </section>
   </body>
 </html>
