--- a/public/projects.html
+++ b/public/projects.html
@@ -77,7 +77,7 @@
       <p>
         Developed in a team of 2 as a single-player game for the CSI3140 course at the
         University of Ottawa, this Tic Tac Toe game showcases proficiency in
-        HTML, CSS, and JavaScript. The game consists of a 3x3 grid where the player and the computer 
+        HTML, CSS, PHP, AJAX, JSON, and JavaScript. The game consists of a 3x3 grid where the player and the computer 
         take turns clicking squares to place their mark (X for the player, O for the computer). 
         The game indicates whose turn it is.
       </p>
@@ -86,6 +86,8 @@
           <b>HTML, CSS, JavaScript:</b> Used to create the game interface and
           implement game logic.
         </li>
+        <br>
+        <li><b>PHP, AJAX, JSON: </b>Used to store the game state and manage the leaderboard on a server. The JavaScript logic communicates with the PHP server by making AJAX calls to the api.php file and by sending and receiving data through JSON files</li>
       </ul>
       <h3>Preview of the game</h3>
       <div class="image-grid">
