--- a/public/projects.html
+++ b/public/projects.html
@@ -91,8 +91,11 @@
       </ul>
       <h3>Preview of the game</h3>
       <div class="image-grid">
-        <img src="images/tictactoe_1.png" alt="tictactoeimage" />
-        <img src="images/tictactoe_2.png" alt="tictactoeimage" />
+        <img src="images/leaderboard.png" alt="tictactoeimage" />
+        <img src="images/new_game.png" alt="tictactoeimage" />
+        <img src="images/win.png" alt="tictactoeimage" />
+        <img src="images/x_win.png" alt="tictactoeimage" />
+        
       </div>
     </section>
     </section>
