added links to the github pages and description of the foodorder project

--- a/public/projects.html
+++ b/public/projects.html
@@ -64,6 +64,7 @@
             dependencies and serving the React application during development.
           </li>
         </ul>
+        <p><a href="https://github.com/fredjkhar/e-hotels-dbms-psql">View on GitHub</a></p>
         <h3>Preview of the website</h4>
             <div class="image-grid">
                 <img src="images/projet1_1.png" alt="project1image" />
@@ -89,15 +90,43 @@
         <br>
         <li><b>PHP, AJAX, JSON: </b>Used to store the game state and manage the leaderboard on a server. The JavaScript logic communicates with the PHP server by making AJAX calls to the api.php file and by sending and receiving data through JSON files</li>
       </ul>
+      <p><a href="https://github.com/tabo006/tiktaktoe">View on GitHub</a></p>
       <h3>Preview of the game</h3>
       <div class="image-grid">
         <img src="images/leaderboard.png" alt="tictactoeimage" />
         <img src="images/new_game.png" alt="tictactoeimage" />
         <img src="images/win.png" alt="tictactoeimage" />
-        <img src="images/x_win.png" alt="tictactoeimage" />
+        <img src="images/x_win.png" alt="tictactoeimage" /> 
+      </div>
+    </section>
+
+    <section class="project">
+      <h2>Food order web application</h2>
+      <p>
+        Developed in a team of 2 using a database and the approaches learnedin the CSI3140 course.
+        at the University of Ottawa, this food order web application showcases proficiency in
+        HTML, CSS, PHP, AJAX, JSON, JavaScript and PostgreSQL. This application consists of a web
+        interface for clients to place orders which will then be saved in the database. An admin can 
+        view and delete orders through the web interface.
+      </p>
+      <ul>
+        <li><b>PostgreSQL:</b> Used as the database management system for storing order data and item information.</li>
+        <li><b>PHP:</b> Implemented for server-side scripting and handling database interactions.</li>
+        <li><b>AJAX:</b> Enabled asynchronous communication between the client and server for a smoother user experience.</li>
+        <li><b>JavaScript:</b> Used to handle client-side logic and dynamic interactions on the web pages.</li>
+        <li><b>HTML & CSS:</b> Utilized to structure and style the web application's interface.</li>
+      </ul>
+      <p><a href="https://github.com/tabo006/csi3140-food-order-web">View on GitHub</a></p>
+      <h3>Preview of the website</h4>
+      <div class="image-grid">
+        <img src="images/admin_sign_in_page.png" alt="tictactoeimage" />
+        <img src="images/home_page.png" alt="tictactoeimage" />
+        <img src="images/order_details_page.png" alt="tictactoeimage" />
+        <img src="images/order_page.png" alt="tictactoeimage" />
         
       </div>
     </section>
+
     </section>
   </body>
 </html>
